--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,9 @@ typing_extensions==4.12.2
 uvicorn==0.32.0
 watchfiles==0.24.0
 websockets==13.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+idna==3.10
+judoscale==1.7.4
+requests==2.32.3
+urllib3==2.2.3
